--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_video_call_app
 description: "A Flutter video call application with Messenger-like UI"
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
@@ -9,38 +9,41 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # State Management
-  provider: ^6.1.2
-  
+  provider: ^6.1.5+1
+
   # Appwrite Backend (upgraded to v20 for compatibility with ZegoCloud)
-  appwrite: ^20.0.0
-  
+  appwrite: ^20.3.2
+
   # Video Calling (using latest compatible version)
-  zego_uikit_prebuilt_call: ^4.21.1
-  zego_uikit_signaling_plugin: ^2.7.0
-  
+  zego_uikit_prebuilt_call: ^4.22.2
+
   # UI & Utilities
   cupertino_icons: ^1.0.8
   cached_network_image: ^3.4.1
-  image_picker: ^1.1.2
-  intl: ^0.19.0
-  uuid: ^4.5.1
-  
+  image_picker: ^1.2.1
+  intl: ^0.20.2
+  uuid: ^4.5.2
+
+  # Push Notifications
+  firebase_messaging: ^16.0.4
+  flutter_local_notifications: ^19.5.0
+
   # Navigation
-  go_router: ^14.6.2
+  go_router: ^17.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
-  
+
   # assets:
   #   - assets/images/
-    
+
   # fonts:
   #   - family: Inter
   #     fonts:
